[gd_scene load_steps=2 format=3 uid="uid://vgor2kenp54n"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_ofcr7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofcr7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -67.0
offset_right = 66.5
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Вернуться"

[node name="restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Рестарт"

[node name="to_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "В меню"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/to_menu" to="." method="_on_to_menu_pressed"]
